@@ -35,6 +35,37 @@ public class BaseDatabaseTypeTest extends BaseCoreTest {
 	}
 
 	@Test
+	public void testCoverage() {
+		TestDatabaseType databaseType = new TestDatabaseType();
+		assertNull(databaseType.getDriverClassName());
+		assertFalse(databaseType.isTruncateSupported());
+		assertFalse(databaseType.isCreateIfNotExistsSupported());
+		assertFalse(databaseType.isSelectSequenceBeforeInsert());
+		assertTrue(databaseType.isAllowGeneratedIdInsertSupported());
+		assertFalse(databaseType.isSequenceNamesMustBeLowerCase());
+		assertEquals(databaseType.isCreateIfNotExistsSupported(), databaseType.isCreateIndexIfNotExistsSupported());
+		assertEquals(databaseType.isCreateIfNotExistsSupported(), databaseType.isCreateSchemaIfNotExistsSupported());
+	}
+
+	@Test
+	public void testAppendEscapedEntityName() {
+		StringBuilder sb = new StringBuilder();
+		String schema = "sc";
+		String table = "table";
+		databaseType.appendEscapedEntityName(sb, schema + "." + table);
+		assertEquals("`" + schema + "`.`" + table + "`", sb.toString());
+	}
+
+	@Test
+	public void testGenerateIdSequenceName() {
+		TestDatabaseType databaseType = new TestDatabaseType();
+		String table = "SOMETABLE";
+		assertEquals(table + "_id_seq", databaseType.generateIdSequenceName(table, null));
+		databaseType.sequenceNamesMustBeLowerCase = true;
+		assertEquals(table.toLowerCase() + "_id_seq", databaseType.generateIdSequenceName(table, null));
+	}
+
+	@Test
 	public void testUnknownClass() throws Exception {
 		assertNull(DataPersisterManager.lookupForField(SomeFields.class.getDeclaredField("someFields")));
 	}
@@ -56,9 +87,20 @@ public class BaseDatabaseTypeTest extends BaseCoreTest {
 
 	private static class TestDatabaseType extends BaseDatabaseType {
 
+		Boolean sequenceNamesMustBeLowerCase;
+
 		@Override
 		public boolean isDatabaseUrlThisType(String url, String dbTypePart) {
 			return false;
+		}
+
+		@Override
+		public boolean isSequenceNamesMustBeLowerCase() {
+			if (sequenceNamesMustBeLowerCase == null) {
+				return super.isSequenceNamesMustBeLowerCase();
+			} else {
+				return sequenceNamesMustBeLowerCase;
+			}
 		}
 
 		@Override
@@ -69,6 +111,12 @@ public class BaseDatabaseTypeTest extends BaseCoreTest {
 		@Override
 		public String getDatabaseName() {
 			return "foo";
+		}
+
+		@SuppressWarnings("deprecation")
+		@Override
+		public String getDriverClassName() {
+			return super.getDriverClassName();
 		}
 	}
 
